Speeded up Gremlin and Cypher implementation in 3 ways (look at the issue)
Issue #88